cluster/k8s/scanner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner-filebrowser
  namespace: scanner
spec:
  type: NodePort
  selector:
    app: scanner
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
